--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "p-mig": "bunx prisma migrate dev",
     "p-gen": "bunx prisma generate dev",
     "p-format": "bunx prisma format",
-    "postinstall": "prisma generate",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
